--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^7.6.1",
     "hamburger-react": "^2.5.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy" :"npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
