--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.1",
     "hamburger-react": "^2.5.0",
     "nextjs-progressbar": "^0.0.16",
