--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "framer-motion": "^7.6.1",
     "hamburger-react": "^2.5.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
