--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.5.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-router-loading": "^1.0.0",
